@@ -366,6 +366,104 @@ cfg_job_stanza (Job        *job,
 			nih_list_add (&job->depends, &dep->entry);
 		}
 
+	} else if (! strncmp (file + tok_start, "on", tok_len)) {
+		/* on WS <event>
+		 *
+		 * names an event that will cause the job to be started.
+		 */
+		if (*arg) {
+			Event *event;
+
+			event = event_new (job, *arg);
+			nih_list_add (&job->start_events, &event->entry);
+		} else {
+			nih_warn ("%s:%d: %s", filename, *lineno,
+				  _("expected event name"));
+		}
+
+	} else if (! strncmp (file + tok_start, "when", tok_len)) {
+		/* when WS <event> FWS (is FWS)? <value>
+		 *
+		 * names a level event that will cause the job to be
+		 * started.
+		 */
+		Event *event;
+		char  *name, *value;
+
+		/* Grab the event name */
+		if (*arg) {
+			name = *arg;
+		} else {
+			arg = NULL;
+			nih_warn ("%s:%d: %s", filename, *lineno,
+				  _("expected event name"));
+		}
+
+		/* Grab the value */
+		if (arg && *++arg) {
+			value = *arg;
+		} else if (arg) {
+			arg = NULL;
+			nih_warn ("%s:%d: %s", filename, *lineno,
+				  _("expected 'is' or event value"));
+		}
+
+		/* If the value is "is" then the argument after may
+		 * be the value (if not, we assume is was the value)
+		 */
+		if (arg && (! strcmp (value, "is")) && *++arg)
+			value = *arg;
+
+		/* Store the event */
+		if (arg) {
+			event = event_new (job, name);
+			event->value = nih_strdup (event, value);
+			nih_list_add (&job->start_events, &event->entry);
+		}
+
+	} else if (! strncmp (file + tok_start, "while", tok_len)) {
+		/* while WS <event> FWS (is FWS)? <value>
+		 *
+		 * short cut for naming a level event that will cause the
+		 * job to be started and stopped when it changes again.
+		 */
+		Event *event;
+		char  *name, *value;
+
+		/* Grab the event name */
+		if (*arg) {
+			name = *arg;
+		} else {
+			arg = NULL;
+			nih_warn ("%s:%d: %s", filename, *lineno,
+				  _("expected event name"));
+		}
+
+		/* Grab the value */
+		if (arg && *++arg) {
+			value = *arg;
+		} else if (arg) {
+			arg = NULL;
+			nih_warn ("%s:%d: %s", filename, *lineno,
+				  _("expected 'is' or event value"));
+		}
+
+		/* If the value is "is" then the argument after may
+		 * be the value (if not, we assume is was the value)
+		 */
+		if (arg && (! strcmp (value, "is")) && *++arg)
+			value = *arg;
+
+		/* Store the event */
+		if (arg) {
+			event = event_new (job, name);
+			event->value = nih_strdup (event, value);
+			nih_list_add (&job->start_events, &event->entry);
+
+			event = event_new (job, name);
+			nih_list_add (&job->stop_events, &event->entry);
+		}
+
 	} else if (! strncmp (file + tok_start, "start", tok_len)) {
 		/* start WS on FWS <event>
 		 * start WS when FWS <event> FWS (is FWS)? <value>
